syntax = "proto3";

package gmp;

option go_package = "types/gmp";

// `GMPPacketData` is the packet data sent over IBC for General Message Passing
// This is the inner packet data that gets wrapped in the IBC packet payload
message GMPPacketData {
    // Source chain sender address (e.g., cosmos1...)
    string sender = 1;

    // Target program ID on destination chain (base58 Solana pubkey)
    string receiver = 2;

    // Salt for GMP account uniqueness (allows multiple accounts per sender)
    bytes salt = 3;

    // Protobuf-encoded execution payload
    // For Solana: This contains a `SolanaInstruction`
    bytes payload = 4;

    // Optional memo field
    string memo = 5;
}

// `GMPAcknowledgement` is returned after packet execution on the destination chain
message GMPAcknowledgement {
    // Whether execution succeeded
    bool success = 1;

    // Result data from execution
    bytes data = 2;

    // Error message if failed
    string error = 3;
}
